@@ -1,5 +1,5 @@
 /*
- * Copyright 2011-2016 the original author or authors.
+ * Copyright 2011-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,8 +15,15 @@
  */
 package org.glowroot.agent.weaving;
 
+import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.net.MalformedURLException;
 import java.net.URL;
+import java.security.CodeSigner;
+import java.security.CodeSource;
+import java.security.ProtectionDomain;
 import java.util.Map;
 
 import com.google.common.collect.ImmutableList;
@@ -24,17 +31,13 @@ import com.google.common.collect.Maps;
 import com.google.common.io.Resources;
 import com.google.common.reflect.Reflection;
 import org.checkerframework.checker.nullness.qual.MonotonicNonNull;
+import org.checkerframework.checker.nullness.qual.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import org.glowroot.agent.api.Glowroot;
-import org.glowroot.agent.impl.OptionalThreadContextImpl;
-import org.glowroot.agent.impl.ServiceRegistryImpl;
-import org.glowroot.agent.impl.ThreadContextImpl;
-import org.glowroot.agent.impl.TransactionRegistry;
-import org.glowroot.agent.impl.TransactionServiceImpl;
-import org.glowroot.agent.model.ThreadContextPlus;
-import org.glowroot.agent.plugin.api.util.FastThreadLocal;
+import org.glowroot.agent.bytecode.api.Bytecode;
+import org.glowroot.agent.plugin.api.Agent;
 import org.glowroot.common.util.OnlyUsedByTests;
 
 // the placement of this code in the main Glowroot code base (and not inside of the tests folder) is
@@ -48,6 +51,7 @@ public class IsolatedWeavingClassLoader extends ClassLoader {
     // bridge classes can be either interfaces or base classes
     private final ImmutableList<Class<?>> bridgeClasses;
     private final Map<String, Class<?>> classes = Maps.newConcurrentMap();
+    private final Map<String, Package> packages = Maps.newConcurrentMap();
 
     private final Map<String, byte[]> manualClasses = Maps.newConcurrentMap();
 
@@ -81,7 +85,8 @@ public class IsolatedWeavingClassLoader extends ClassLoader {
     public <S, T extends S> S newInstance(Class<T> implClass, Class<S> bridgeClass)
             throws Exception {
         validateBridgeable(bridgeClass.getName());
-        return bridgeClass.cast(loadClass(implClass.getName()).newInstance());
+        return bridgeClass
+                .cast(loadClass(implClass.getName()).getDeclaredConstructor().newInstance());
     }
 
     @Override
@@ -106,6 +111,7 @@ public class IsolatedWeavingClassLoader extends ClassLoader {
             }
         }
         byte[] bytes = manualClasses.get(name);
+        CodeSource codeSource = null;
         if (bytes == null) {
             String resourceName = ClassNames.toInternalName(name) + ".class";
             URL url = getResource(resourceName);
@@ -117,17 +123,60 @@ public class IsolatedWeavingClassLoader extends ClassLoader {
             } catch (IOException e) {
                 throw new ClassNotFoundException("Error loading class", e);
             }
+            String path = url.getPath();
+            if (url.getProtocol().equals("jar")) {
+                int index = path.indexOf("!/");
+                File jarFile = new File(path.substring(5, index));
+                try {
+                    codeSource = new CodeSource(jarFile.toURI().toURL(), (CodeSigner[]) null);
+                } catch (MalformedURLException e) {
+                    logger.error(e.getMessage(), e);
+                }
+            }
         }
-        return weaveAndDefineClass(name, bytes);
+        return weaveAndDefineClass(name, bytes, codeSource);
     }
 
-    public Class<?> weaveAndDefineClass(String name, byte[] bytes) {
+    @Override
+    protected @Nullable Package getPackage(String name) {
+        return packages.get(name);
+    }
+
+    public Class<?> weaveAndDefineClass(String name, byte[] bytes,
+            @Nullable CodeSource codeSource) {
         byte[] wovenBytes = weaveClass(name, bytes);
         String packageName = Reflection.getPackageName(name);
-        if (getPackage(packageName) == null) {
-            definePackage(packageName, null, null, null, null, null, null, null);
+        if (!packages.containsKey(packageName)) {
+            Method getDefinedPackageMethod;
+            try {
+                getDefinedPackageMethod = getClass().getMethod("getDefinedPackage", String.class);
+            } catch (NoSuchMethodException e) {
+                getDefinedPackageMethod = null;
+            }
+            Package pkg;
+            if (getDefinedPackageMethod == null) {
+                pkg = definePackage(packageName, null, null, null, null, null, null, null);
+            } else {
+                // Java 9
+                try {
+                    pkg = (Package) getDefinedPackageMethod.invoke(this, packageName);
+                    if (pkg == null) {
+                        pkg = definePackage(packageName, null, null, null, null, null, null, null);
+                    }
+                } catch (IllegalAccessException e) {
+                    throw new RuntimeException(e);
+                } catch (InvocationTargetException e) {
+                    throw new RuntimeException(e);
+                }
+            }
+            packages.put(packageName, pkg);
         }
-        return super.defineClass(name, wovenBytes, 0, wovenBytes.length);
+        if (codeSource == null) {
+            return super.defineClass(name, wovenBytes, 0, wovenBytes.length);
+        } else {
+            ProtectionDomain protectionDomain = new ProtectionDomain(codeSource, null);
+            return super.defineClass(name, wovenBytes, 0, wovenBytes.length, protectionDomain);
+        }
     }
 
     private byte[] weaveClass(String name, byte[] bytes) throws ClassFormatError {
@@ -139,7 +188,7 @@ public class IsolatedWeavingClassLoader extends ClassLoader {
             inWeaving.set(true);
             try {
                 byte[] wovenBytes =
-                        weaver.weave(bytes, ClassNames.toInternalName(name), null, this);
+                        weaver.weave(bytes, ClassNames.toInternalName(name), null, null, this);
                 if (wovenBytes == null) {
                     return bytes;
                 } else {
@@ -168,29 +217,24 @@ public class IsolatedWeavingClassLoader extends ClassLoader {
         if (isInBootstrapClassLoader(name)) {
             return true;
         }
-        // this is needed to prevent these thread locals retaining the IsolatedWeavingClassLoader
-        // and causing PermGen OOM during maven test
-        if (name.equals(FastThreadLocal.class.getName())
-                || name.equals(FastThreadLocal.class.getName() + "$Holder")) {
+        if (name.startsWith("java.")) {
+            // in Java 9, some java packages are no longer in the bootstrap class loader, but still
+            // need to load with parent class loader in order to avoid SecurityException "Prohibited
+            // package name"
             return true;
         }
-        if (name.equals(Glowroot.class.getName())) {
+        if (name.equals(Glowroot.class.getName())
+                || name.equals(Agent.class.getName())
+                || name.equals(Bytecode.class.getName())
+                || name.equals(org.glowroot.agent.plugin.api.util.ImmutableList.class.getName())
+                || name.equals(org.glowroot.agent.plugin.api.util.ImmutableMap.class.getName())
+                || name.equals(org.glowroot.agent.plugin.api.util.ImmutableSet.class.getName())
+                || name.equals(Beans.class.getName())) {
             return false;
         }
-        // these are the classes that plugins depend on, either directly (api classes) or indirectly
-        // (weaving)
         if (name.startsWith("org.glowroot.agent.api.")
                 || name.startsWith("org.glowroot.agent.plugin.api.")
-                || name.startsWith("org.glowroot.agent.weaving.GeneratedAdvice")
-                || name.startsWith("org.glowroot.agent.weaving.GeneratedMethodMeta")
-                || name.equals(OptionalThreadContextImpl.class.getName())
-                || name.equals(ServiceRegistryImpl.class.getName())
-                || name.equals(ThreadContextImpl.class.getName())
-                || name.equals(ThreadContextPlus.class.getName())
-                || name.equals(TransactionRegistry.class.getName())
-                || name.equals(TransactionRegistry.TransactionRegistryHolder.class.getName())
-                || name.equals(TransactionServiceImpl.class.getName())
-                || name.equals(TransactionServiceImpl.TransactionServiceHolder.class.getName())) {
+                || name.startsWith("org.glowroot.agent.bytecode.api.")) {
             return true;
         }
         return false;
